Bug/mobile not responsive (#41)
* responsiveness

* removing width of form className

--- a/jnch009smartbrain/src/Components/ImageLinkForm/ImageLinkForm.css
+++ b/jnch009smartbrain/src/Components/ImageLinkForm/ImageLinkForm.css
@@ -1,5 +1,4 @@
 .form {
-  width: 50rem;
   background-color: black;
   background-image: radial-gradient(
       white,
